--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,9 @@
 
     /* width */
     ::-webkit-scrollbar {
+        @include media-mobile {
+            height: 0;
+        }
         width: 6px;
         height: 6px;
     }
